buildscript {
    repositories {
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
    }
    dependencies {
        classpath 'dev.yumi:yumi-gradle-licenser:1.2.0'
        classpath 'com.github.johnrengelman:shadow:8.1.1'
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'dev.yumi.gradle.licenser'
    apply plugin: 'com.github.johnrengelman.shadow'

    group = 'com.timomcgrath.packstacker'
    version = '1.0.0'

    sourceCompatibility = 17
    targetCompatibility = 17

    jar {
        from '../LICENSE.txt'
    }

    license {
        rule file('../codeformat/HEADER')
        include '**/*.java'
    }

    project.ext.version = version;

    repositories {
        mavenCentral()
        maven {
            name = 'papermc-repo'
            url = 'https://repo.papermc.io/repository/maven-public/'
        }
        maven {
            name = 'sonatype'
            url = 'https://oss.sonatype.org/content/groups/public/'
        }
    }

    tasks.build.dependsOn('shadowJar')
}